[package]
name = "bridge-common"
description = "A common library for the Bridge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/StarfleetAI/bridge-common"

[dependencies]
anyhow = "1.0.82"
askama = "0.12.1"
async-recursion = "1.1.0"
async-trait = "0.1.80"
bollard = "0.16.1"
candle-core = { version = "0.4.1" }
candle-nn = { version = "0.4.1" }
candle-transformers = { version = "0.4.1" }
chrono = { version = "0.4.38", features = ["serde"] }
fantoccini = { version = "0.19.3", default-features = false, features = ["rustls-tls"] }
futures-util = "0.3.30"
hf-hub = { version = "0.3.2", features = ["tokio"] }
markdown = "1.0.0-alpha.16"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["rustls-tls", "json", "http2"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "chrono"] }
thiserror = "1.0.59"
tokenizers = "0.19.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
